cmake_minimum_required(VERSION 3.31)
project(DSA_Revision)

find_package(Catch2 CONFIG REQUIRED)

set(CMAKE_CXX_STANDARD 26)

add_executable(DSA_Revision main.cpp)
add_executable(Arrays-Hashing arrays-hashing.cpp)
add_executable(Two-Pointer two-pointer.cpp)
add_executable(Sliding-Window sliding-window.cpp)
add_executable(Stack stack.cpp)
add_executable(Binary-Search binary-search.cpp)
add_executable(Linked-List linked-list.cpp)
add_executable(Trees trees.cpp)
add_executable(Heap heap.cpp)
add_executable(Backtracking backtracking.cpp)
add_executable(Tries tries.cpp)
target_link_libraries(Arrays-Hashing PRIVATE Catch2::Catch2WithMain)
target_link_libraries(Two-Pointer PRIVATE Catch2::Catch2WithMain)
target_link_libraries(Sliding-Window PRIVATE Catch2::Catch2WithMain)
target_link_libraries(Stack PRIVATE Catch2::Catch2WithMain)
target_link_libraries(Binary-Search PRIVATE Catch2::Catch2WithMain)
target_link_libraries(Linked-List PRIVATE Catch2::Catch2WithMain)
target_link_libraries(Trees PRIVATE Catch2::Catch2WithMain)
target_link_libraries(Heap PRIVATE Catch2::Catch2WithMain)
target_link_libraries(Backtracking PRIVATE Catch2::Catch2WithMain)
target_link_libraries(Tries PRIVATE Catch2::Catch2WithMain)